...
        )

        val services = if (BuildConfig.DEBUG && intent.getBooleanExtra("omi.demo", false)) {
            DemoServices.makeServices()
        } else {
            AppServices(
                settings = SettingsStore(SharedPreferencesKeyValueStore(applicationContext)),
            )
        }
        store = AppStore(services = services)
        applyIntent(intent)

        setContent {
...
